--- a/css/home-page.css
+++ b/css/home-page.css
@@ -1,4 +1,4 @@
-/*Humayra Hussain - 210005848*/
+/*HOME PAGE styling - Humayra Hussain - 210005848*/
 *{
     margin: 0;
     padding: 0;
@@ -96,7 +96,7 @@ a:hover{
 /************************Styling for Login Banner**************************/
 /*5 Categories for Menu*/
 .menu{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.9);
     color: white;
     padding: 5px;
     display: flex;
@@ -182,7 +182,7 @@ a:hover{
 
 /************************FEATURED PRODUCT SHOWCASE**************************/
 .featured-products h2{
-    margin-top: 40px;
+    margin-top: 60px;
     text-align: center;
     position: relative;
     line-height: 40px;
@@ -220,73 +220,82 @@ a:hover{
 }
 .product-card .button{
     margin-top: 30px;
-    transform: translateX(45px);
-    background-color: rgb(34, 83, 198);
-    color: white;
-    border: 1px solid black;    
+    border-radius: 10px;   
     align-items: bottom;
     position: absolute;
+    transform: translateX(40px);
+    color: white;
+    transition: background-colour 0.3s ease;
+    background-color: rgba(46, 10, 10, 0.5);
+}
+.product-card .button:hover{
+    background-color: rgba(0, 0, 0, 0.9);
 }
 .product-card:hover{
     transform: scale(1.1);
 }
 
-/************************ABOUT US and CONTACT US**************************/
+/**************************ABOUT US and CONTACT US**************************/
 .about{
-    margin-top: 80px;
     padding: 30px 0;
     display: flex;
     align-items: center;
     flex-wrap: wrap;
     justify-content: space-around;
 }
-
 .box{
     flex-basis: 48%;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    border: 1px solid black;
-    padding: 60px;
+    border-radius: 10px;
+    padding: 20px;
     margin-bottom: 20px;
-    background-size: contain;
-    background-position: center;
     color: white;
     text-shadow: 4px 2px 6px rgba(0, 0, 0, 0.5);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
-.box a:hover{
-    text-shadow: none;
+.box h1{
+    margin-top: 30px;
 }
-
 .box h1, .box p{
     margin-bottom: 10px;
     text-align: center;
 }
 .box .button{
-    margin-top: 10px;
+    margin-top: 20px;
+    transition: transform 0.5s ease;
+    transition: background-colour 0.3s ease;
+    background-color: rgba(46, 10, 10, 0.5);
+    border: none;
+    margin-bottom: 30px;
+}
+.box .button:hover{
+    background-color: rgba(0, 0, 0, 0.9);
+    transform: scale(1.2);
 }
 .box img{
     max-width: 400px;
 }
+.about-p{
+    margin-top: 60px;
+    text-align: center;
+}
 
-/*******FOOTER***********/
-
+/*********************************FOOTER*************************************/
 .footer{
+    padding-top: 30px;
     font-size: small;
     display: flex;
     justify-content: space-around;
     color: black;
-    padding: 25px 0 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
-footer::before{
-    content: "";
-    display: block;
-    height: 1px;
-    background-color: gray;
-    padding: 0;
-}
-
 .footer-box{
     flex: 1;
     text-align: center;
@@ -294,19 +303,16 @@ footer::before{
 .footer-box img{
     width: 20px;
 }
-.btn{
-    color: black;
-    text-decoration: none;
+.footer .button{
     cursor: pointer;
-    background-color: transparent;
-    border: 1px solid black;
-    margin-top: 5px;
-    padding: 10px;
+    transition: transform 0.5s ease;
+    transition: background-colour 0.3s ease;
+    background-color: rgba(46, 10, 10, 0.5);
+    border: none;
 }
-.btn:hover{
+.footer .button:hover{
     text-decoration: underline;
 }
-
 .footer h3{
     padding-bottom: 10px;
 }
@@ -315,12 +321,10 @@ ul{
     padding: 5px 10px;
     display: inline-block;
 }
-
 footer p{
     text-align: center;
     font-size: small;
-    padding: 10px;
-    margin-bottom: 10px;
+    margin-bottom: 5px;
 }
 .socials{
     width: 15px;
@@ -328,13 +332,17 @@ footer p{
    transform: translate(140px);
 }
 .line{
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.9);
     color: white;
+    padding: 5px;
+    display: flex;
+    font-size: small;
+    justify-content: space-around;
+    align-items: center;
 }
-/*************FOOTER END**************/
 
 
-/*Products Page*/
+/*Product-details page styling - Humayra Hussain - 210005848*/
 .product{
     width: 100%;
 }
