Testing php fixes
Adjust stuff

--- a/css/home-page.css
+++ b/css/home-page.css
@@ -495,3 +495,13 @@ th:last-child{
 .checkout-button:hover {
     background-color: #401f9b;
 }
+
+/*SABZ*/
+.welcome-message {
+    font-size: 12px; 
+    color: #e90606; 
+    padding: 10px;
+    margin-top: 20px; 
+    text-align: center; 
+
+}
