--- a/css/accounts.css
+++ b/css/accounts.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Arial', sans-serif;
+    font-family: "Poppins", sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
@@ -78,3 +78,225 @@ body {
     }
 }
 
+/*Menu, Navigation Bar and Footer styling from homepage.css*/
+
+/*Styling for NAVIGATION BAR**/
+header .navbar{
+    text-align: center;
+    background-color: white;
+    width: 100%;
+    max-width: 100%;
+}
+.navbar{
+    display: flex;
+    align-items: center;
+    font-size: small;
+}
+/*Search Bar*/
+.search{
+    margin-top: 20px;
+    padding: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+input{
+    width: 500px;
+    margin-left: 20px;
+}
+.search img{
+    height: 15px;
+    width: 15px;
+}
+/*Links to pages for the Nav-bar*/
+a{
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+    padding: 2px;
+}
+a:hover{
+    text-decoration: underline;
+}
+.links{
+    flex: 1;
+    text-align: right;
+    padding-right: 5px;
+    padding-top: 20px;
+}
+.links nav{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+}
+.links .img-links img{
+    display: inline-block;
+    margin-right: 50px;
+    margin-bottom: -7px;
+}
+.links ul{
+    display: inline-block;
+    list-style-type: none;
+}
+.links .page-links ul li{
+    display: inline-block;
+    margin-right: 20px;
+}
+.links img{
+    display: inline-block;
+    width: 20px;
+    text-align: center;
+}
+.img-links .home-icon{
+    width: 15px;
+    transform: translate(-12px);
+}
+.img-links .account-icon{
+    width: 15px;
+    transform: translate(-11px);
+}
+.img-links .basket-icon{
+    width: 15px;
+    transform: translate(-10px);
+}
+
+/************************Styling for Login Banner**************************/
+/*5 Categories for Menu*/
+.menu{
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    padding: 5px;
+    display: flex;
+    font-size: small;
+    justify-content: space-around;
+    align-items: center;
+}
+.menu a{
+    text-decoration: none;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+}
+.menu a:hover{
+    text-decoration: underline;
+}
+/*Log-in Banner*/
+.banner-log{
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    text-align: center;
+}
+.log-in{
+    width: max-width;
+    height: 500px;
+    color: white;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.button{
+    display: inline-block;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-bottom: 50px;
+    border: 2px solid white;
+    background-color: transparent;
+    padding: 10px 20px;
+    cursor: pointer;
+    color: white;
+    border-radius: 10px;
+}
+.button:hover{
+    text-decoration: underline;
+}
+.heading{
+    width: 60%;
+    transition: background-colour 0.3s ease;
+    background-color: rgba(0, 0, 0, 0.7);
+    border: 1px solid black;
+    border-radius: 10px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    transition: transform 0.3s ease;
+}
+.heading:hover{
+    background-color: rgba(0, 0, 0, 0.8);
+    transform: scale(1.05);
+}
+.heading h1{
+    font-size: 50px;
+    line-height: 60px;
+    text-align: center;
+    margin: 10px 0;
+    padding-top: 50px;
+}
+.heading-links{
+    padding-top: 30px;
+}
+.log-in p{
+    text-align: center;
+    padding: 20px;
+}
+.button#login-btn{
+    background-color: white;
+    color: black;
+    margin-left: 40px;
+}
+
+/*FOOTER*/
+.footer{
+    padding-top: 30px;
+    font-size: small;
+    display: flex;
+    justify-content: space-around;
+    color: black;
+    border-radius: 10px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+}
+.footer-box{
+    flex: 1;
+    text-align: center;
+}
+.footer-box img{
+    width: 20px;
+}
+.footer .button{
+    cursor: pointer;
+    transition: transform 0.5s ease;
+    transition: background-colour 0.3s ease;
+    background-color: rgba(46, 10, 10, 0.5);
+    border: none;
+}
+.footer .button:hover{
+    text-decoration: underline;
+}
+.footer h3{
+    padding-bottom: 10px;
+}
+ul{
+    list-style-type: none;
+    padding: 5px 10px;
+    display: inline-block;
+}
+footer p{
+    text-align: center;
+    font-size: small;
+    margin-bottom: 5px;
+}
+.socials{
+    width: 15px;
+    margin: 10px;
+   transform: translate(140px);
+}
+.line{
+    background-color: rgba(0, 0, 0, 0.9);
+    color: white;
+    padding: 5px;
+    display: flex;
+    font-size: small;
+    justify-content: space-around;
+    align-items: center;
+}
