--- a/css/past-orders.css
+++ b/css/past-orders.css
@@ -55,6 +55,7 @@
 }
 
 #button{
+    padding:3px;
     margin-left: 490px;
     margin-top: 30px;
     margin-bottom:50px;
@@ -62,4 +63,19 @@
 
 #price{
     margin-left:490px;
+}
+
+.review-btn{
+    height:27px;
+    width:120px;
+    border-color:rgb(131, 130, 130);
+}
+
+.review-btn:hover{
+    cursor: pointer;
+    opacity: 0.7;
+}
+
+.price-txt{
+    margin-top:10px;
 }
